--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width-device-width,initial-scale=1,maximum-scale=1">
-    <title>Angular Practise</title>
+    <title>Angular Project - Admin Dashboard</title>
     <base href="\">
     <meta name="viewport" content="width=device-width,minimum-scale=1" />
     <link
