--- a/src/index.html
+++ b/src/index.html
@@ -1,37 +1,19 @@
-.change-yourself-sec {
-    .definition-challenge {
-        padding: 10px 15px;
-        border-radius: 9px;
-        background-color: #f8f8f8;
-        margin-bottom: 24px;
-        h4 {
-            color: #757575;
-            font-weight: 400;
-            margin-top: 0;
-        }
-        ul {
-            margin-bottom: 0;
-            li {
-                color: #333333;
-                font-weight: 600;
-                font-size: 16px;
-            }
-        }
-    }
-    .form-sec {
-        .row>div {
-            margin-bottom: 40px;
-        }
-    }
-    .form-control::-webkit-input-placeholder {
-        /* Edge */
-        color: #b0afaf;
-    }
-    .form-control:-ms-input-placeholder {
-        /* Internet Explorer 10-11 */
-        color: #b0afaf;
-    }
-    .form-control::placeholder {
-        color: #b0afaf;
-    }
-}
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width-device-width,initial-scale=1,maximum-scale=1">
+    <title>Angular Project - Admin Dashboard </title>
+    <base href="\">
+    <meta name="viewport" content="width=device-width,minimum-scale=1" />
+    <link
+      rel="stylesheet"
+      href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css"
+    />
+  </head>
+  <body>
+    </div>
+        <app-root></app-root>
+    </div>
+  </body>
+</html>
